add Partial Swagger
